// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`javascript_lang_dangerous_insert_html insecure-document_write 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "79"
      ],
      "id": "javascript_lang_dangerous_insert_html",
      "title": "Unsanitized user input in dynamic HTML insertion (XSS)",
      "description": "## Description\\nThere are XSS vulnerabilities when dynamically inserting HTML that contains unsanitized data.\\n\\n## Remediations\\nMake sure you use HTML sanitization library before inserting html\\n\\n\`\`\`javascript\\nimport sanitizeHtml from 'sanitize-html';\\n\\nconst html = \`<strong>\${user.Input}</strong>\`;\\ndocument.body.innerHTML = sanitizeHtml(html)\\n\`\`\`\\n\\n## Resources\\n- [OWASP XSS explained](https://owasp.org/www-community/attacks/xss/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_lang_dangerous_insert_html",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/insecure-document_write.js",
      "filename": ".",
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 3,
          "end": 38
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 3,
          "end": 38
        },
        "content": "document.write(\`<li>\${input}</li>\`)"
      },
      "parent_line_number": 2,
      "snippet": "document.write(\`<li>\${input}</li>\`)",
      "fingerprint": "315770dda0d4ea464e59f5bd073bd950_0",
      "old_fingerprint": "f2715af76f6b84d2f19052ee9292d9e3_0",
      "code_extract": "  document.write(\`<li>\${input}</li>\`)"
    },
    {
      "cwe_ids": [
        "79"
      ],
      "id": "javascript_lang_dangerous_insert_html",
      "title": "Unsanitized user input in dynamic HTML insertion (XSS)",
      "description": "## Description\\nThere are XSS vulnerabilities when dynamically inserting HTML that contains unsanitized data.\\n\\n## Remediations\\nMake sure you use HTML sanitization library before inserting html\\n\\n\`\`\`javascript\\nimport sanitizeHtml from 'sanitize-html';\\n\\nconst html = \`<strong>\${user.Input}</strong>\`;\\ndocument.body.innerHTML = sanitizeHtml(html)\\n\`\`\`\\n\\n## Resources\\n- [OWASP XSS explained](https://owasp.org/www-community/attacks/xss/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_lang_dangerous_insert_html",
      "line_number": 8,
      "full_filename": "/tmp/bearer-scan/insecure-document_write.js",
      "filename": ".",
      "source": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 3,
          "end": 48
        }
      },
      "sink": {
        "start": 8,
        "end": 8,
        "column": {
          "start": 3,
          "end": 48
        },
        "content": "el.innerHTML = \\"<div>\\" + userInput + \\"</div>\\""
      },
      "parent_line_number": 8,
      "snippet": "el.innerHTML = \\"<div>\\" + userInput + \\"</div>\\"",
      "fingerprint": "315770dda0d4ea464e59f5bd073bd950_1",
      "old_fingerprint": "f2715af76f6b84d2f19052ee9292d9e3_1",
      "code_extract": "  el.innerHTML = \\"<div>\\" + userInput + \\"</div>\\""
    },
    {
      "cwe_ids": [
        "79"
      ],
      "id": "javascript_lang_dangerous_insert_html",
      "title": "Unsanitized user input in dynamic HTML insertion (XSS)",
      "description": "## Description\\nThere are XSS vulnerabilities when dynamically inserting HTML that contains unsanitized data.\\n\\n## Remediations\\nMake sure you use HTML sanitization library before inserting html\\n\\n\`\`\`javascript\\nimport sanitizeHtml from 'sanitize-html';\\n\\nconst html = \`<strong>\${user.Input}</strong>\`;\\ndocument.body.innerHTML = sanitizeHtml(html)\\n\`\`\`\\n\\n## Resources\\n- [OWASP XSS explained](https://owasp.org/www-community/attacks/xss/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_lang_dangerous_insert_html",
      "line_number": 12,
      "full_filename": "/tmp/bearer-scan/insecure-document_write.js",
      "filename": ".",
      "source": {
        "start": 12,
        "end": 12,
        "column": {
          "start": 3,
          "end": 38
        }
      },
      "sink": {
        "start": 12,
        "end": 12,
        "column": {
          "start": 3,
          "end": 38
        },
        "content": "document.body.outerHTML = userInput"
      },
      "parent_line_number": 12,
      "snippet": "document.body.outerHTML = userInput",
      "fingerprint": "315770dda0d4ea464e59f5bd073bd950_2",
      "old_fingerprint": "f2715af76f6b84d2f19052ee9292d9e3_2",
      "code_extract": "  document.body.outerHTML = userInput"
    },
    {
      "cwe_ids": [
        "79"
      ],
      "id": "javascript_lang_dangerous_insert_html",
      "title": "Unsanitized user input in dynamic HTML insertion (XSS)",
      "description": "## Description\\nThere are XSS vulnerabilities when dynamically inserting HTML that contains unsanitized data.\\n\\n## Remediations\\nMake sure you use HTML sanitization library before inserting html\\n\\n\`\`\`javascript\\nimport sanitizeHtml from 'sanitize-html';\\n\\nconst html = \`<strong>\${user.Input}</strong>\`;\\ndocument.body.innerHTML = sanitizeHtml(html)\\n\`\`\`\\n\\n## Resources\\n- [OWASP XSS explained](https://owasp.org/www-community/attacks/xss/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_lang_dangerous_insert_html",
      "line_number": 17,
      "full_filename": "/tmp/bearer-scan/insecure-document_write.js",
      "filename": ".",
      "source": {
        "start": 17,
        "end": 17,
        "column": {
          "start": 3,
          "end": 23
        }
      },
      "sink": {
        "start": 17,
        "end": 17,
        "column": {
          "start": 3,
          "end": 23
        },
        "content": "document.write(name)"
      },
      "parent_line_number": 17,
      "snippet": "document.write(name)",
      "fingerprint": "315770dda0d4ea464e59f5bd073bd950_3",
      "old_fingerprint": "f2715af76f6b84d2f19052ee9292d9e3_3",
      "code_extract": "  document.write(name)"
    }
  ]
}"
`;

exports[`javascript_lang_dangerous_insert_html insecure-element_ref 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "79"
      ],
      "id": "javascript_lang_dangerous_insert_html",
      "title": "Unsanitized user input in dynamic HTML insertion (XSS)",
      "description": "## Description\\nThere are XSS vulnerabilities when dynamically inserting HTML that contains unsanitized data.\\n\\n## Remediations\\nMake sure you use HTML sanitization library before inserting html\\n\\n\`\`\`javascript\\nimport sanitizeHtml from 'sanitize-html';\\n\\nconst html = \`<strong>\${user.Input}</strong>\`;\\ndocument.body.innerHTML = sanitizeHtml(html)\\n\`\`\`\\n\\n## Resources\\n- [OWASP XSS explained](https://owasp.org/www-community/attacks/xss/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_lang_dangerous_insert_html",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/insecure-element_ref.js",
      "filename": ".",
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 2,
          "end": 47
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 2,
          "end": 47
        },
        "content": "this.ref.replaceChildren(\`<li>\${input}</li>\`)"
      },
      "parent_line_number": 2,
      "snippet": "this.ref.replaceChildren(\`<li>\${input}</li>\`)",
      "fingerprint": "315770dda0d4ea464e59f5bd073bd950_0",
      "old_fingerprint": "77aaf3a9264049dc97cafbd34be6192b_0",
      "code_extract": "\\tthis.ref.replaceChildren(\`<li>\${input}</li>\`);"
    }
  ]
}"
`;

exports[`javascript_lang_dangerous_insert_html insecure-property_assigment 1`] = `
"{
  "high": [
    {
      "cwe_ids": [
        "79"
      ],
      "id": "javascript_lang_dangerous_insert_html",
      "title": "Unsanitized user input in dynamic HTML insertion (XSS)",
      "description": "## Description\\nThere are XSS vulnerabilities when dynamically inserting HTML that contains unsanitized data.\\n\\n## Remediations\\nMake sure you use HTML sanitization library before inserting html\\n\\n\`\`\`javascript\\nimport sanitizeHtml from 'sanitize-html';\\n\\nconst html = \`<strong>\${user.Input}</strong>\`;\\ndocument.body.innerHTML = sanitizeHtml(html)\\n\`\`\`\\n\\n## Resources\\n- [OWASP XSS explained](https://owasp.org/www-community/attacks/xss/)\\n",
      "documentation_url": "https://docs.bearer.com/reference/rules/javascript_lang_dangerous_insert_html",
      "line_number": 2,
      "full_filename": "/tmp/bearer-scan/insecure-property_assigment.js",
      "filename": ".",
      "source": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 2,
          "end": 42
        }
      },
      "sink": {
        "start": 2,
        "end": 2,
        "column": {
          "start": 2,
          "end": 42
        },
        "content": "this.ref.innerHTML = \`<li>\${input}</li>\`"
      },
      "parent_line_number": 2,
      "snippet": "this.ref.innerHTML = \`<li>\${input}</li>\`",
      "fingerprint": "315770dda0d4ea464e59f5bd073bd950_0",
      "old_fingerprint": "98894f5fc03e671c1269e70e059ae14f_0",
      "code_extract": "\\tthis.ref.innerHTML = \`<li>\${input}</li>\`;"
    }
  ]
}"
`;

exports[`javascript_lang_dangerous_insert_html secure 1`] = `"{}"`;
